--- a/services1.css
+++ b/services1.css
@@ -363,15 +363,17 @@
   
   
   .container2{
-  height: 99vh;
-  background-color: white;
+  height: 74.5vh;
+  /* background-color: yellow; */
+  background-image:url(Picture31.png);
   display: flex;
-  margin-top: -50px;
+  margin-top: 65px;
   }  
   .slideshow-container {
-    height: 90vh;
+    height: 68vh;
     position: relative;
     margin: auto;
+    
   }
   
   /* Hide the images by default */
@@ -412,7 +414,7 @@
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -640px;
+   margin-top: -536px;
    margin-left: 100px;
     width: 50%;
     text-align: justify;
@@ -420,10 +422,10 @@
    
   
   }
-  .me{
+  .me1{
     color: rgb(116, 110, 110);
     margin-left: 570px;
-    margin-top: -746px;
+    margin-top: -632px;
     font-size: 24px;
     font-family: sans-serif;
   }
@@ -455,23 +457,28 @@
    
   }
   .rd {
-  width:10%;
-  height:30px;
-  margin-top: 100px;
+  width:12%;
+  height:50px;
+  margin-top: 126px;
   margin-left: 800px;
   border-radius: 30px;
   border-style:solid;
   /* background-color:#FFFFFF; */
   text-align: center;
-  border-width:5px;
-  border-color:rgba(33, 55, 253, 0.5); 
+  border-width:2px;
+  border-color:blue; 
   
   }
   
   .a-pos1{
     font-size:28px;
     color:blue;
-    margin-top:40px;
+    margin-top:5px;
+    margin-left:-40px;
+  }
+  .openbook{
+    margin-top:-34px;
+    margin-left:175px;
   }
   
   
@@ -482,7 +489,7 @@
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -662px;
+   margin-top: -540px;
    margin-left: 100px;
     width: 50%;
     text-align: justify;
@@ -493,7 +500,7 @@
   .me2{
    
     margin-left: 570px;
-    margin-top: -766px;
+    margin-top: -636px;
     font-size: 24px;
     font-family: sans-serif;
   }
@@ -525,11 +532,31 @@
     height:350px;
    
   }
-  
-  .a-pos2{
-    font-size:28px;
-    margin-top:40px;
-  }
+  .rd2 {
+    width:12%;
+    height:50px;
+    margin-top: 126px;
+    margin-left: 800px;
+    border-radius: 30px;
+    border-style:solid;
+    /* background-color:#FFFFFF; */
+    text-align: center;
+    border-width:2px;
+    border-color:blue; 
+    
+    }
+    
+    .a-pos2{
+      font-size:28px;
+      color:blue;
+      margin-top:5px;
+      margin-left:-40px;
+    }
+    .openbook2{
+      margin-top:-34px;
+      margin-left:175px;
+    }
+    
   
   /* ---------------------------third slides css------------------------ */
   
@@ -538,7 +565,7 @@
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -662px;
+   margin-top: -540px;
    margin-left: 100px;
     width: 50%;
     text-align: justify;
@@ -548,7 +575,7 @@
   }
   .me3{
     margin-left: 570px;
-    margin-top: -766px;
+    margin-top: -636px;
     font-size: 24px;
     font-family: sans-serif;
   }
@@ -581,13 +608,30 @@
     height:350px;
    
   }
-  
-  .a-pos3{
-    font-size:28px;
-    margin-top:40px;
-  }
-  
-  
+  .rd3{
+    width:12%;
+    height:50px;
+    margin-top: 126px;
+    margin-left: 800px;
+    border-radius: 30px;
+    border-style:solid;
+    /* background-color:#FFFFFF; */
+    text-align: center;
+    border-width:2px;
+    border-color:blue; 
+    
+    }
+    
+    .a-pos3{
+      font-size:28px;
+      color:blue;
+      margin-top:5px;
+      margin-left:-40px;
+    }
+    .openbook3{
+      margin-top:-34px;
+      margin-left:175px;
+    }
   
   
   
@@ -606,7 +650,7 @@
   /* Number text (1/3 etc) */
   .numbertext {
     color: #221f1f;
-    font-size: 22px;
+    font-size: 26px;
     margin-left: 1800px;
     position: absolute;
     margin-top: 20px;
@@ -641,13 +685,13 @@
     to {opacity: 1}
   }
   .img1{
-    margin-top: -40px;
+    margin-top: -142px;
   }
   .img2{
-    margin-top: -40px;
+    margin-top: -142px;
   }
   .img3{
-    margin-top: -40px;
+    margin-top: -142px;
   }
   
   
@@ -742,7 +786,7 @@
   .container1{
     height:88vh;
     background-color:seashell;
-    margin-top:-99.2px;
+    margin-top:0px;
   }
   .ppos16{
     color:black;
