--- a/IndustrialAutomationSolutions.css
+++ b/IndustrialAutomationSolutions.css
@@ -549,11 +549,11 @@ color: #fff;
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:85.8vh;
+    height:87.8vh;
     margin-top:113px;
   }
   .hpos1{
-   margin-left:10px; 
+   margin-left:30px; 
     margin-top:0px;
     color:white;
     font-family:sans-serif;
@@ -561,7 +561,8 @@ color: #fff;
   }
   
   .container2{
-    background-image:url(Picture53.PNG);
+    /* background-image:url(Picture53.PNG); */
+    background-color: salmon;
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -695,11 +696,19 @@ margin-right: auto;
   margin-top:10px;
   color:white;
   font-family:sans-serif;
-  font-size:28px;
+  font-size:26px;
+  
+}
+.para-2{
+  margin-left:-915px;
+  margin-top:410px;
+  color:white;
+  font-family:sans-serif;
+  font-size:26px;
   
 }
 .pic72{
-  margin-left:-1570px;
+  margin-left:-1496px;
   margin-top:250px;
 }
 .pic73{
@@ -737,6 +746,7 @@ margin-right: auto;
     .para1{
     margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh;
     }
+    
     .hpost6{
       margin-left:39.35vw;margin-top:-43.8vh;font-size:0.7vw;
     }
@@ -789,7 +799,7 @@ margin-right: auto;
       margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw;
     }
     .RA{
-      margin-left:67.7vw;margin-top:-7.2vh;font-size:1vw;
+      margin-left:67.7vw;margin-top:-4.5vh;font-size:1vw;
     }
       .footer{
         height: 60px;
