--- a/road.css
+++ b/road.css
@@ -401,7 +401,7 @@ margin-right: auto;
 .vl {
   border-left: 2px solid rgb(97, 94, 91);
   height: 450px;
-  margin-left: 50px;
+  margin-left: 48px;
   margin-top: 140px;
 }
 .yer{
@@ -413,7 +413,7 @@ margin-right: auto;
 }
 .rimg1{
   margin-top: 160px;
-  margin-left: -270px;
+  margin-left: -250px;
 }
 
 .rdpara1{
@@ -451,7 +451,7 @@ margin-right: auto;
 
 .vl1 {
   border-left: 2px solid rgb(97, 94, 91);
-  height: 500px;
+  height: 450px;
   margin-left: 942px;
   margin-top: 100px;
 }
@@ -494,7 +494,7 @@ margin-right: auto;
 
 .vl2 {
   border-left: 2px solid rgb(97, 94, 91);
-  height: 500px;
+  height: 450px;
   margin-left: 942px;
   margin-top: 104px;
 }
@@ -520,7 +520,7 @@ margin-right: auto;
 
 
 .container5{
-  height: 71vh;
+  height: 79vh;
   background-color:lightgreen;
   display: flex;
   margin-top: -120px;
@@ -537,7 +537,7 @@ margin-right: auto;
 
 .vl3 {
   border-left: 2px solid rgb(97, 94, 91);
-  height: 500px;
+  height: 450px;
   margin-left: 942px;
   margin-top: 105px;
 }
@@ -553,14 +553,146 @@ margin-right: auto;
   margin-left: -706px;
   margin-top: 130px;
 }
+.container6{
+  height: 79vh;
+  background-color:orange;
+  display: flex;
+  margin-top: -120px; 
+}
+.rdpara5{
+  margin-top: 300px;
+  width:600px;
+  margin-left: 2.75%;
+  font-size: 22px;
+  font-family: sans-serif;
+  line-height:40px;
+}
+
+.vl4 {
+  border-left: 2px solid rgb(97, 94, 91);
+  height: 450px;
+  margin-left: 942px;
+  margin-top: 105px;
+}
+.yer4{
+  margin-left: -758px;
+  margin-top: 65px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: sans-serif;
+ 
+}
+.rimg5{
+  margin-left: -706px;
+  margin-top: 130px;
+}
+.container7{
+  height: 79vh;
+  background-color:lightslategray;
+  display: flex;
+  margin-top: -120px; 
+}
+.rdpara6{
+  margin-top: 300px;
+  width:600px;
+  margin-left: 2.75%;
+  font-size: 22px;
+  font-family: sans-serif;
+  line-height:40px;
+}
+
+.vl5 {
+  border-left: 2px solid rgb(97, 94, 91);
+  height: 450px;
+  margin-left: 942px;
+  margin-top: 105px;
+}
+.yer5{
+  margin-left: -758px;
+  margin-top: 65px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: sans-serif;
+ 
+}
+.rimg6{
+  margin-left: -706px;
+  margin-top: 130px;
+}
+.container8{
+  height: 79vh;
+  background-color:lightseagreen;
+  display: flex;
+  margin-top: -120px; 
+}
+.rdpara7{
+  margin-top: 300px;
+  width:600px;
+  margin-left: 2.75%;
+  font-size: 22px;
+  font-family: sans-serif;
+  line-height:40px;
+}
+
+.vl6 {
+  border-left: 2px solid rgb(97, 94, 91);
+  height: 450px;
+  margin-left: 942px;
+  margin-top: 105px;
+}
+.yer6{
+  margin-left: -758px;
+  margin-top: 65px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: sans-serif;
+ 
+}
+.rimg7{
+  margin-left: -706px;
+  margin-top: 130px;
+}
+.container10{
+  height: 72vh;
+  background-color:burlywood;
+  display: flex;
+  margin-top: -120px; 
+}
+.rdpara8{
+  margin-top: 300px;
+  width:600px;
+  margin-left: 2.75%;
+  font-size: 22px;
+  font-family: sans-serif;
+  line-height:40px;
+}
+
+.vl7 {
+  border-left: 2px solid rgb(97, 94, 91);
+  height: 450px;
+  margin-left: 942px;
+  margin-top: 105px;
+}
+.yer7{
+  margin-left: -758px;
+  margin-top: 65px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: sans-serif;
+ 
+}
+.rimg8{
+  margin-left: -706px;
+  margin-top: 130px;
+}
 .container9{
   background-image: linear-gradient(to right, rgb(173, 184, 197) , rgba(31, 82, 223, 0.986));
-  height:86.6vh;
+  height:81.2vh;
   margin-left:-0.4vw;
   width:99.5vw;
 }
 .Circle1{
-margin-left:1.7vw;padding-top:18.55vh;
+margin-left:1.7vw;padding-top:11.55vh;
 } 
 .Circle2{
 margin-left:1.64vw;margin-top:19.6vh;
@@ -675,6 +807,5 @@ margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh;
     margin-top: 9.5px;
     margin-left: 1.6%;
   }
-
 
 
