--- a/WhoWeAre.css
+++ b/WhoWeAre.css
@@ -477,7 +477,7 @@
   font-family: sans-serif;
     position: absolute;
    margin-top: -480px;
-   margin-left: 280px;
+   margin-left: 200px;
     width: 50%;
     text-align: justify;
     }                                                         
@@ -511,8 +511,8 @@
   
   
   .meimge1{
-    margin-top: -680px;
-    margin-left: 1130px;
+    margin-top: -679px;
+    margin-left: 1100px;
     z-index: -1;
     display: flex;
     /* width:1000px; */
@@ -538,7 +538,7 @@
   font-size:20px;
 }
         .globelogo{
-        margin-left: 590px;
+        margin-left: 520px;
 
         margin-top: 80px;
         font-size: 150px;
@@ -550,7 +550,7 @@
   font-family: sans-serif;
     position: absolute;
    margin-top: 60px;
-   margin-left: 280px;
+   margin-left: 200px;
     width: 50%;
     text-align: justify;
    
@@ -586,7 +586,7 @@
   
   .meimge2{
     margin-top: -268.5px;
-    margin-left: 1130px;
+    margin-left: 1100px;
     z-index: -1;
     display: flex;
    
@@ -622,7 +622,7 @@
   font-family: sans-serif;
     position: absolute;
    margin-top: 60px;
-   margin-left: 280px;
+   margin-left: 200px;
     width: 50%;
     text-align: justify;
     line-height:40px;
@@ -630,7 +630,7 @@
   
   }
   .img5{
-    margin-left:500px;
+    margin-left:480px;
     margin-top:100px;
   }
   .me2{
@@ -664,7 +664,7 @@
   
   .meimge3{
     margin-top: -262px;
-    margin-left: 1130px;
+    margin-left: 1100px;
     z-index: -1;
     display: flex;
    
@@ -685,14 +685,14 @@ font-size:20px;
   font-family: sans-serif;
     position: absolute;
    margin-top: 60px;
-   margin-left: 280px;
+   margin-left: 200px;
     width: 50%;
     text-align: justify;
    
   
   }
   .img6{
-    margin-left:550px;
+    margin-left:490px;
     margin-top:100px;
   }
   .me3{
@@ -727,7 +727,7 @@ font-size:20px;
   
   .meimge4{
     margin-top: -290px;
-    margin-left: 1130px;
+    margin-left: 1100px;
     z-index: -1;
     display: flex;
    
@@ -771,7 +771,7 @@ font-size:20px;
   }
   
   /* Fading animation */
-  .fade {
+  /* .fade {
     animation-name: fade;
     animation-duration: 1.5s;
   }
@@ -779,7 +779,7 @@ font-size:20px;
   @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
-  }
+  } */
   .img1{
     margin-top: -41px;
     margin-left:-20vh
