--- a/dummyseemorewhoslideshow.css
+++ b/dummyseemorewhoslideshow.css
@@ -281,7 +281,7 @@
   
   
   .container{
-    background-image:url(Picture64.PNG);
+    background-image:url(Picture69.PNG);
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -294,13 +294,13 @@
     margin-top:113px;
   }
   .hpos1{
-    color:white;margin-left:4.4vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
+    color:white;margin-left:5.2vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
   }
   .parapos1{
-    color:white;margin-top:14vh;margin-left:-44vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:14vh;margin-left:-56vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .parapos2{
-    color:white;margin-top:36vh;margin-left:-51.2vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:35.5vh;margin-left:-56vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .circle {
     width: 400px;
@@ -308,7 +308,7 @@
     line-height: 500px;
     border-radius: 50%;
     margin-top: 46px;
-    margin-left: 335px;
+    margin-left: 235px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
@@ -331,12 +331,11 @@
   }
   .para1{
     margin-top: 200px;
-    color: #fff;
+    
     font-size: 54px;
-    font-family: sans-serif;
     margin-left: 3%;
     width: 60vw;
-    font-weight: bold;
+    
    
   }
   .para2{
@@ -392,7 +391,8 @@
   } */
   
   .container1{
-    background-image:url(Picture65.PNG);
+    /* background-image:url(Picture69.PNG); */
+    background-color:rgb(24, 129, 214);
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -401,100 +401,514 @@
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:86vh;
+    height:86.6vh;
     margin-top:0px;
   }
-  .img1{
-    margin-left:30px;
-    margin-top:20px;
+  /* .rec1{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:138px;
+    margin-top:-540px;
+    z-index:-3;
+  } */
+  .image1{
+    margin-top:-670px;
+    margin-left:227px;
   }
-  .hpos-1{
-    margin-left:70px;
-    margin-top:80px;
-    color:white;
-    font-size:20px;
+  .img_1{
+    margin-top:-533.5px;
+    margin-left:227px;
   }
-  .ppos-1{
-margin-top:81px;
-margin-left:-182px;
-font-size:25px;
-color:white;
-font-family:sans-serif;
+  .h-1{
+   
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+    margin-left:-1185px;
   }
-  .vl {
-    border-left: 6px solid white;
-    height: 200px;
-    margin-left:80px;
-    margin-top:25px;
+  .p-1{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:-1165px;
   }
-  .ppos-4{
-    color:white;
-    margin-left:70px;
-    font-size:28px;
-    font-family:sans-serif;
+  /* .rec2{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:738px;
+    margin-top:-540px;
+    
+  } */
+  .image2{
+    margin-top:-523px;
+    margin-left:827px;
+  }
+  .img_2{
+    margin-top:-534px;
+    margin-left:827px;
+  }
+  .h-2{
+    color:dodgerblue;
+    text-align:center;
+    margin-top:2px;
+    margin-left:15px;
+  }
+  .p-2{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:-15px;
+  }
+  /* .rec3{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:1338px;
+    margin-top:-540px;
+    
+  } */
+  .image3{
+    margin-top:-523px;
+    margin-left:1427px;
+  }
+  .img_3{
+    margin-top:-534px;
+    margin-left:1427px;
+  }
+  .h-3{
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+    margin-left:1200px;
+  }
+  .p-3{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:1200px;
+  }
+
+  .image4{
+    margin-top:-670px;
+    margin-left:227px;
+  }
+  .img_4{
+    margin-top:-533.5px;
+    margin-left:227px;
+    
+  }
+  .h-4{
+   
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+    margin-left:-1185px;
+  }
+  .p-4{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:-1165px;
+  }
+  /* .rec2{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:738px;
+    margin-top:-540px;
+    
+  } */
+  .image5{
+    margin-top:-523px;
+    margin-left:827px;
+  }
+  .img_5{
+    margin-top:-534px;
+    margin-left:827px;
+  }
+  .h-5{
+    color:dodgerblue;
+    text-align:center;
+    margin-top:2px;
+    margin-left:15px;
+  }
+  .p-5{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:-15px;
+  }
+  /* .rec3{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:1338px;
+    margin-top:-540px;
+    
+  } */
+  .image6{
+    margin-top:-523px;
+    margin-left:1427px;
+  }
+  .img_6{
+    margin-top:-534px;
+    margin-left:1427px;
+  }
+  .h-6{
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+    margin-left:1200px;
+  }
+  .p-6{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+    margin-left:1200px;
+  }
+  .slideshow-container {
+    height: 68vh;
+    position: relative;
+    margin: auto;
+    
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -82px;
+    padding: 16px;
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: -5px;
+    border-radius: 3px 0 0 3px;
+  }
+  .prev{
+    margin-left:-5px;
+  }
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text                                                               first slide css */
+  .text1 {
+    color:black;
+    font-size: 28px;
+  font-family: sans-serif;
+    position: absolute;
+   margin-top: -536px;
+   margin-left: 250px;
+    width: 50%;
+    text-align: justify;
     line-height:40px;
+   
+  
+  }
+  /* .me1{
+    color: rgb(116, 110, 110);
+    margin-left: 760px;
+    margin-top: -632px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  .co{
+  margin-left: 1090px;
+  margin-top: -28px;
+  font-size: 24px;
+  font-family: sans-serif;
+  }
+  .int{
+    margin-left: 1330px;
+    margin-top: -28px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  
+  
+  
+  
+  .meimge{
+    margin-top: 80px;
+    margin-left: 1180px;
+    z-index: -1;
+    display: flex;
+    
+    
+   
+  }
+  .rd {
+  width:12%;
+  height:50px;
+  margin-top: 80px;
+  margin-left: 990px;
+  border-radius: 30px;
+  border-style:solid;
+ 
+  text-align: center;
+  border-width:2px;
+  border-color:blue; 
+  
+  }
+  
+  .a-pos1{
+    font-size:28px;
+    color:blue;
+    margin-top:6.5px;
+    margin-left:-40px;
+  }
+  .openbook{
+    margin-top:-34px;
+    margin-left:175px;
+  } */
+  
+  
+  /* ---------------------------second slides css------------------------ */
+  
+  /* .text2 {
+    color:black;
+    font-size: 28px;
+  font-family: sans-serif;
+    position: absolute;
+   margin-top: -540px;
+   margin-left: 250px;
+    width: 50%;
+    text-align: justify;
+    line-height:40px;
+   
+  
+  }
+  .me2{
+   
+    margin-left: 760px;
+    margin-top: -636px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  .co2{
+    color: rgb(116, 110, 110);
+  margin-left: 1090px;
+  margin-top: -28px;
+  font-size: 24px;
+  font-family: sans-serif;
+  }
+  .int2{
+    margin-left: 1330px;
+    margin-top: -28px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  
+  
+  
+  
+  .meimge2{
+    margin-top: 80px;
+    margin-left: 1180px;
+    z-index: -1;
+    display: flex;
+   
+  }
+  .rd2 {
+    width:12%;
+    height:50px;
+    margin-top: 80px;
+    margin-left: 990px;
+    border-radius: 30px;
+    border-style:solid;
+    
+    text-align: center;
+    border-width:2px;
+    border-color:blue; 
+    
+    }
+    
+    .a-pos2{
+      font-size:28px;
+      color:blue;
+      margin-top:6.5px;
+      margin-left:-40px;
+    }
+    .openbook2{
+      margin-top:-34px;
+      margin-left:175px;
+    } */
+    
+  
+  /* ---------------------------third slides css------------------------ */
+  
+  /* .text3 {
+    color:black;
+    font-size: 28px;
+  font-family: sans-serif;
+    position: absolute;
+   margin-top: -540px;
+   margin-left: 250px;
+    width: 50%;
+    text-align: justify;
+    line-height:40px;
+   
+  
+  }
+  .me3{
+    margin-left: 760px;
+    margin-top: -636px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  .co3{
+    margin-left: 1090px;
+    margin-top: -28px;
+  font-size: 24px;
+  font-family: sans-serif;
+  }
+  .int3{
+    color: rgb(116, 110, 110);
+    margin-left: 1330px;
+    margin-top: -28px;
+    font-size: 24px;
+    font-family: sans-serif;
+  }
+  
+  
+  
+  
+  
+  .meimge3{
+    margin-top: 80px;
+    margin-left: 1180px;
+    
+    z-index: -1;
+    display: flex;
+    
+   
+  }
+  .rd3{
+    width:11.1%;
+    height:50px;
+    margin-top: 80px;
+    margin-left: 990px;
+    border-radius: 30px;
+    border-style:solid;
+   
+    text-align: center;
+    border-width:2px;
+    border-color:blue; 
+    
+    }
+    
+    .a-pos3{
+      font-size:28px;
+      color:blue;
+      margin-top:6.5px;
+      margin-left:-40px;
+    }
+    .openbook3{
+      margin-top:-34px;
+      margin-left:175px;
+    }
+   */
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  /* Number text (1/3 etc) */
+  /* .numbertext {
+    color: #221f1f;
+    font-size: 26px;
+    margin-left: 1800px;
+    position: absolute;
+    margin-top: 20px;
+    font-weight:bold;
+  } */
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+   margin-top: 100px;
+   margin-left: -200px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  /* .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  } */
+  .img1{
+    margin-top: -85px;
+    margin-left:-187px;
   }
   .img2{
-    margin-left:-1594.5px;
-    margin-top:280px;
-  }
-  .hpos-2{
-    margin-left:80px;
-    margin-top:330px;
-    color:white;
-    font-size:20px;
-  }
-  .ppos-2{
-    margin-top:332px;
-    color:white;
-    font-family:sans-serif;
-    font-size:25px;
-    margin-left:-155px;
-  }
-  .vl1 {
-    border-left: 6px solid white;
-    height: 200px;
-    margin-left:87px;
-    margin-top:290px;
-  }
-  .ppos-5{
-    color:white;
-    margin-left:70px;
-    margin-top:260px;
-    font-size:28px;
-    font-family:sans-serif;
-    line-height:40px;
+    margin-top: -85px;
+    margin-left:-187px;
   }
   .img3{
-    margin-left:-1645px;
-    margin-top:545px;
-  }
-  .hpos-3{
-    margin-left:80px;
-    margin-top:603px;
-    color:white;
-    font-size:20px;
-  }
-  .ppos-3{
-    color:white;
-    font-family:sans-serif;
-    font-size:25px;
-    margin-top:603px;
-    margin-left:-120px;
-  }
-  .vl2 {
-    border-left: 6px solid white;
-    height: 200px;
-    margin-left:110px;
-    margin-top:555px;
-  }
-  .ppos-6{
-    color:white;
-    font-size:28px;
-    margin-top:520px;
-    margin-left:68px;
-    font-family:sans-serif;
-    line-height:40px;
+    margin-top: -85px;
+    margin-left:-187px;
   }
   .ppos1{
     margin-left:3vw;
@@ -502,13 +916,13 @@ font-family:sans-serif;
     padding-top:1.5vh;
     color:#717171
   }
-  .numbertext {
+  /* .numbertext {
     color: blue;
     font-size: 22px;
     margin-left: 460px;
     position: absolute;
     margin-top: -49px;
-  }
+  } */
 
   .container2{
   height: 99vh;
@@ -519,7 +933,8 @@ font-family:sans-serif;
   
   
   
-                                       
+  
+                                                             
                                                              
                                                              
   .text {
@@ -536,11 +951,6 @@ font-family:sans-serif;
   
   }
   
-  
-  .img4{
-    margin-top: -41px;
-    margin-left:-20vh
-  }
   
   
   
@@ -790,7 +1200,7 @@ font-size:3vw;
   .hpost5{
   margin-left:10.45vw;margin-top:34.5vh;font-size:0.7vw;
   }
-  .para-1{
+  .para1{
   margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh;
   }
   .hpost6{
