--- a/home.css
+++ b/home.css
@@ -35,10 +35,10 @@
   margin-top:42vh;margin-left:-33.8vw;font-size:1.3vw;line-height:4.4vh;
 }
 .smallrect{
-  padding-left:-22vw;padding-top:75vh;
+  padding-left:-25vw;padding-top:75vh;
 }
 #rectangle3{
-  width:13vw;height:4vh;border-style:solid;border-width:0.15vw;border-color:royalblue;
+  width:13vw;height:4vh;border-style:solid;border-width:0.15vw;border-color:royalblue;margin-left:-3vw;
 }
 .alink2{
   margin-left:-4.3vw;
@@ -56,7 +56,7 @@
     border-style: solid;
     background-image: linear-gradient(to right, rgb(236, 235, 232) , rgba(255, 51, 0, 0.952));
     margin-top:175px;
-    margin-left:-129.8px;
+    margin-left:-108.6px;
    } 
    .hbar2{
     width:160px;
@@ -178,7 +178,7 @@
     }
     .img1{
       margin-top: 40px;
-      margin-left:-2.21vw
+      margin-left:-2.19vw
     }
     .img2{
       margin-top: 41px;
@@ -861,7 +861,7 @@ margin-left:9.97vw;font-size:1.2vw;line-height:4vh;margin-top:-65.7vh;
   margin-left:39.5vw;margin-top:-9.3vh;font-size:1vw;
 }
 .RA{
-  margin-left:67.3vw;margin-top:-9.26vh;font-size:1vw;
+  margin-left:67.3vw;margin-top:-7vh;font-size:1vw;
 }
   .footer{
     height: 60px;
