--- a/services1.css
+++ b/services1.css
@@ -674,7 +674,7 @@ font-family: sans-serif;
 }
 
 /* Fading animation */
-.fade {
+/* .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
@@ -682,7 +682,7 @@ font-family: sans-serif;
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
-}
+} */
 .img1{
   margin-top: -110px;
   margin-left:-187px;
