--- a/home.css
+++ b/home.css
@@ -34,19 +34,19 @@
  
   margin-top:42vh;margin-left:-33.8vw;font-size:1.3vw;line-height:4.4vh;
 }
-.smallrect{
+/* .smallrect{
   padding-left:-25vw;padding-top:75vh;
-}
+} */
 #rectangle3{
-  width:13vw;height:4vh;border-style:solid;border-width:0.15vw;border-color:royalblue;margin-left:-3vw;
+  width:13vw;height:4vh;border-style:solid;border-width:0.15vw;border-color:royalblue;margin-left:-3vw;margin-top:72vh;
 }
-.alink2{
-  margin-left:-4.3vw;
-  margin-top:-2.8vh;
+.alink-2{
+  margin-left:1vw;
+  margin-top:0vh;
   font-family:'Times New Roman', Times, serif;
   }
   .arrow1{
-      margin-left:-3.2vw;margin-top:73.5vh;font-size:2.9vw;color:blue;
+      margin-left:-3vw;margin-top:70.5vh;font-size:2.9vw;color:blue;
   }
     
    .hbar1{
