--- a/insights.css
+++ b/insights.css
@@ -605,6 +605,7 @@ font-size:3vw;
   height:79.4vh;
   margin-left:-0.4vw;
   width:99.5vw;
+  margin-top:0px;
 }
 .Circle1{
 margin-left:1.7vw;padding-top:11.55vh;
